Commit finish user interface

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-
     <title>Conversor Moeda</title>
 
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}" />
 
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/base.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/reset.css}">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css"
@@ -21,24 +19,83 @@
     <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@700&display=swap">
 
+    <link rel="stylesheet" type="text/css" th:href="@{/css/base.css}">
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#txtValor').mask('000.000.000.000.000,00', { reverse: true });
+        });
+    </script>
+
+
 </head>
 
 <body>
     <main class="container">
 
-        <h1 class="title">Conversor de Moedas</h1>
-        <!-- <h2>
-                <span th:text="'Hello, ' + ${message}"></span>
-            </h2> -->
+        <h1 class="title d-flex justify-content-center">Conversor de Moedas</h1>
+
+        <div class="conversor">
+            <select class="conversor_conversao form-select" aria-label="Default select example" required>
+                <option selected>Escolha uma conversão</option>
+                <option value="1">Real para Dólar (BRL -> USD)</option>
+                <option value="2">Real para Euro (BRL -> EUR)</option>
+                <option value="3">Real para Libras Esterlinas (BRL -> GBP)</option>
+                <option value="4">Real para Peso Argentino (BRL -> ARS)</option>
+                <option value="5">Real para Peso Chileno (BRL -> CLP)</option>
+                <option value="6">Dóla para Real (USD -> BRL)</option>
+                <option value="7">Euro para Real (EUR -> BRL)</option>
+                <option value="8">Libras Esterlinas para Real (GBP -> BRL)</option>
+                <option value="9">Peso Argentino para Real (ARS -> BRL)</option>
+                <option value="10">Peso Chileno para Real (CLP -> BRL)</option>
+            </select>
+            <div class="conversor_valor input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">Valor</span>
+                <input type="text" id="txtValor" class="form-control" required />
+            </div>
+            <button class="conversor_converter btn btn-primary" type="button"
+                th:onclick="|window.location.href='/do-stuff'">Converter</button>
+        </div>
+
+        <table class=" table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Conversão</th>
+                    <th scope="col">Original</th>
+                    <th scope="col">Convertido</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+        <!-- 
+
+        <h2>
+            <span th:text="'Hello, ' + ${message}"></span>
+        </h2>
 
         <ol>
             <li th:each="task : ${tasks}" th:text="${task}"></li>
         </ol>
-
+ -->
     </main>
     <!-- /.container -->
 
-    <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>
 </body>
 
 </html>
